@@ -1,3 +1,5 @@
+* Check no move when modify product of lot
+
 Version 4.8.0 - 2018-04-23
 * Bug fixes (see mercurial logs for details)
 
